--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
       <div class="bg-white p-4 rounded shadow">
         <h3 class="text-lg font-bold mb-2">Project 1 Snake</h3>
-        <p class="text-gray-700 mb-4">A simple **Snake game** built with JavaScript and Canvas. Control the snake, eat fruits, and avoid the walls to survive! 🐍🎮</p>
+        <p class="text-gray-700 mb-4">A simple Snake game built with JavaScript and Canvas. Control the snake, eat fruits, and avoid the walls to survive! 🐍🎮</p>
         <a href="snake.html" class="text-blue-600 hover:underline">Try it</a>
       </div>
     </div>
