--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <p class="text-gray-700 mb-4">A simple Snake game built with JavaScript and Canvas. Control the snake, eat fruits, and avoid the walls to survive! 🐍🎮</p>
         <a href="snake.html" class="text-blue-600 hover:underline">Try it</a>
       </div>
+      <div class="bg-white p-4 rounded shadow">
+        <h3 class="text-lg font-bold mb-2">Project 2 Sprite Sheet</h3>
+        <p class="text-gray-700 mb-4">in progress</p>
+        <a href="#" class="text-blue-600 hover:underline">Try it</a>
+      </div>
     </div>
   </main>
   <footer class="bg-blue-600 text-white p-4 mt-8">
