--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Project Selection Kraptukrait</title>
+  <title>Web Experiments in HTML by Kraptukrait</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"/>
@@ -11,14 +11,14 @@
 <body class="bg-gray-100 font-roboto">
   <header class="bg-blue-600 text-white p-4">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">My Projects</h1>
+      <h1 class="text-2xl font-bold">Web Experiments in HTML</h1>
     </div>
   </header>
   <main class="container mx-auto p-4">
     <h2 class="text-xl font-bold mb-4">Select a Project</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
       <div class="bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-bold mb-2">Project 1 Snake</h3>
+        <h3 class="text-lg font-bold mb-2">Project 1 Snake game</h3>
         <p class="text-gray-700 mb-4">A simple Snake game built with JavaScript and Canvas. Control the snake, eat fruits, and avoid the walls to survive! 🐍🎮</p>
         <a href="snake.html" class="text-blue-600 hover:underline">Try it</a>
       </div>
