--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Web Experiments in HTML by Kraptukrait</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Website Under Construction</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            color: #333;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 0.5rem;
+            color: #2c3e50;
+        }
+        p {
+            font-size: 1.25rem;
+            color: #555;
+            max-width: 400px;
+        }
+        .construction-icon {
+            font-size: 5rem;
+            margin-bottom: 1rem;
+            color: #e67e22;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-roboto">
-  <header class="bg-blue-600 text-white p-4">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Web Experiments in HTML</h1>
-    </div>
-  </header>
-  <main class="container mx-auto p-4">
-    <h2 class="text-xl font-bold mb-4">Select a Project</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-      <div class="bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-bold mb-2">Project 1 Snake game</h3>
-        <p class="text-gray-700 mb-4">A simple Snake game built with JavaScript and Canvas. Control the snake, eat fruits, and avoid the walls to survive! 🐍🎮</p>
-        <a href="snake.html" class="text-blue-600 hover:underline">Try it</a>
-      </div>
-      <div class="bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-bold mb-2">Project 2 Sprite Sheet</h3>
-        <p class="text-gray-700 mb-4">in progress</p>
-        <a href="#" class="text-blue-600 hover:underline">Try it</a>
-      </div>
-    </div>
-  </main>
-  <footer class="bg-blue-600 text-white p-4 mt-8">
-    <div class="container mx-auto text-center">
-      <!-- <p>&copy; 2025 My Projects. All rights reserved.</p> -->
-    </div>
-  </footer>
+<body>
+    <div class="construction-icon">🚧</div>
+    <h1>Website Under Construction</h1>
+    <p>We're working hard to bring you a great experience. Please check back soon!</p>
 </body>
 </html>
