--- a/NoughtsAndCrosses.html
+++ b/NoughtsAndCrosses.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: "Poppins", sans-serif;
-            background: linear-gradient(135deg, #007bff, #00c6ff);
+            background: linear-gradient(135deg, #a8e063, #56ab2f);
             height: 100vh;
             display: flex;
             flex-direction: column;
