Fix link for Noughts and Crosses game

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <h1>🎮 Kraptukrait Games</h1>
 
   <div class="games-container">
-    <div class="game-card" onclick="window.location.href='Noughts and Crosses/Noughts and Crosses.html'">⭕ Noughts and Crosses</div>
+    <div class="game-card" onclick="window.location.href='NoughtsAndCrosses.html'">⭕ Noughts and Crosses</div>
     <div class="game-card" onclick="window.location.href='Snake/Snake.html'">🐍 Snake</div>
     <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🏓 Pong</div>
     <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🧠 Memory</div>
