--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <div class="games-container">
     <div class="game-card" onclick="window.location.href='NoughtsAndCrosses.html'">⭕ Noughts and Crosses</div>
-    <div class="game-card" onclick="window.location.href='Snake/Snake.html'">🐍 Snake</div>
+    <div class="game-card" onclick="window.location.href='Snake.html'">🐍 Snake</div>
     <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🏓 Pong</div>
     <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🧠 Memory</div>
   </div>
