Update Memory game link in index.html

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="game-card" onclick="window.location.href='NoughtsAndCrosses.html'">⭕ Noughts and Crosses</div>
     <div class="game-card" onclick="window.location.href='Snake.html'">🐍 Snake</div>
     <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🏓 Pong</div>
-    <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🧠 Memory</div>
+    <div class="game-card" onclick="window.location.href='Memory.html'">🧠 Memory</div>
   </div>
 
   <button onclick="alert('More games coming soon!')">🚀 More Games</button>
