Update Pong game link in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="games-container">
     <div class="game-card" onclick="window.location.href='NoughtsAndCrosses.html'">⭕ Noughts and Crosses</div>
     <div class="game-card" onclick="window.location.href='Snake.html'">🐍 Snake</div>
-    <div class="game-card" onclick="alert('🔧 Loading... Please wait')">🏓 Pong</div>
+    <div class="game-card" onclick="window.location.href='Pong.html'">🏓 Pong</div>
     <div class="game-card" onclick="window.location.href='Memory.html'">🧠 Memory</div>
   </div>
 
