--- a/Memory.html
+++ b/Memory.html
@@ -165,7 +165,7 @@
 <button onclick="resetGame()">🔄 Reset Game</button>
 
 <script>
-    const symbols = ["🍒","⭐","🔥","💎","🎲","🎵","🌙","⚡"];
+    const symbols = ["🍒","⭐","🔥","💎","🎲","🎵","😄","⚡"];
     let deck = [...symbols, ...symbols];
     let first = null;
     let block = false;
